--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">team38</string>
+    <string name="app_name">shelterATL</string>
     <string name="title_activity_shelter_detail_view">ShelterDetailView</string>
 </resources>
